--- a/lang/es.json
+++ b/lang/es.json
@@ -1,14 +1,13 @@
 {
     "I18N.LANGUAGE": "Español",
     "I18N.MAINTAINERS": "@Viriato139ac#0342",
-
     "levels.modulename": "Levels (Niveles)",
     "levels.settings.enableTooltips.name": "Habilitar globos",
     "levels.settings.enableTooltips.hint": "Muestra globos de información de los niveles superior e inferior cuando se pasa el ratón por encima de objetos de nivel",
     "levels.settings.tokenElevScale.name": "Cambiar tamaño de los iconos",
     "levels.settings.tokenElevScale.hint": "Cambia el tamaño de los iconos en base a la elevación del icono que se está controlando",
-    "levels.settings.tokenElevScaleMultiSett.name":"Multiplicador de escala de elevación personalizado",
-    "levels.settings.tokenElevScaleMultiSett.hint":"Multiplica la escala de elevación por este número. Un número mayor que 1 hará los iconos más grandes, mientras que uno menor a 1, los hará más pequeños",
+    "levels.settings.tokenElevScaleMultiSett.name": "Multiplicador de escala de elevación personalizado",
+    "levels.settings.tokenElevScaleMultiSett.hint": "Multiplica la escala de elevación por este número. Un número mayor que 1 hará los iconos más grandes, mientras que uno menor a 1, los hará más pequeños",
     "levels.settings.fogHiding.name": "Niebla de guerra avanzada",
     "levels.settings.fogHiding.hint": "Oculta las plantas que aún no han explorado de la niebla de guerra",
     "levels.settings.lockElevation.name": "Bloquear elevación",
@@ -25,9 +24,9 @@
     "levels.settings.preciseTokenVisibility.hint": "Al habilitar esta opción, se comprobará la visión desde las esquinas del icono, ademas de la habitual desde el centro, a coste de reducir el rendimiento",
     "levels.settings.exactTokenVisibility.name": "Visibilidad exacta de icono",
     "levels.settings.exactTokenVisibility.hint": "Se debe habilitar visibilidad precisa de icono para que esta opción funcione. Hará que se haga una comprobación de las esquinas de los iconos. Se sugiere usar esta opción si se está usando 3D Canvas",
-    "levels.settings.blockSightMovement.name":"Obstáculos",
-    "levels.settings.blockSightMovement.hint":"Al habilitarlo, los muros con altura que no restringen la visión, seguirán restringiendo el movimiento",
-    "levels.settings.forceUiRefresh.name":"Forzar recarga de la UI",
+    "levels.settings.blockSightMovement.name": "Obstáculos",
+    "levels.settings.blockSightMovement.hint": "Al habilitarlo, los muros con altura que no restringen la visión, seguirán restringiendo el movimiento",
+    "levels.settings.forceUiRefresh.name": "Forzar recarga de la UI",
     "levels.settings.forceUiRefresh.hint": "Fuerza que se refresque con mayor frecuenta la UI de niveles a costa de reducir el rendimiento; puede causar problemas en algunos sistemas (p.ej. PF2e)",
     "levels.settings.hideElevation.name": "Ocultar elevación",
     "levels.settings.hideElevation.hint": "No mostrar la elevación de los iconos",
@@ -36,26 +35,23 @@
     "levels.settings.hideElevation.opt2": "Ocultar a todo el mundo",
     "levels.settings.revealTokenInFog.name": "Revelar niebla en icono",
     "levels.settings.revealTokenInFog.hint": "Si un icono es visible, revela la niebla de guerra a su alrededor",
-
-
-    "levels.tilecoonfig.noOverhead": "Esto no es una baldosa superior, esta baldosa será ignorada por niveles y se generará desde el final de la pila",
-    "levels.tilecoonfig.rangeTop.name": "Altura (superior)",
-    "levels.tilecoonfig.rangeBottom.name": "Altura (inferior)",
-    "levels.tilecoonfig.showIfAbove.name": "¿Mostrar incluso cuando se esté por debajo?",
-    "levels.tilecoonfig.showIfAbove.hint": "Si se habilita, la baldosa se mostrará incluso si el icono está por debajo del rango de altura inferior (por ejemplo, se puede usar en balcones)",
-    "levels.tilecoonfig.showAboveRange.name":"Diferencia máxima de elevación",
-    "levels.tilecoonfig.showAboveRange.hint": "Cuando se habilita '¿Mostrar incluso cuando esté por debajo?', esta será la máxima diferencia de elevación entre el icono y la baldosa, por encima de este valor, la baldosa no se mostrará",
-    "levels.tilecoonfig.isBasement.name":"¿Se trata del sótano?",
-    "levels.tilecoonfig.isBasement.hint": "Si se habilita, la baldosa solo se mostrará si el icono está dentro del rango de la baldosa, esto significa que un icono por encima del rango superior no verá la baldosa",
-    "levels.tilecoonfig.noFogHide.name":"No ocultar esta baldosa en la niebla",
-    "levels.tilecoonfig.noFogHide.hint": "Excluir esta baldosa del modo 'Niebla de guerra avanzada' de Levels",
-    "levels.tilecoonfig.range.unit": "Elevación",
-    "levels.tilecoonfig.excludeFromChecker.name": "Excluir del depurador de escenas",
-    "levels.tilecoonfig.noCollision.name": "Permitir visión",
-    "levels.tilecoonfig.noCollision.hint": "Si se habilita, la baldosa no bloqueará la visión",
-    "levels.tilecoonfig.allWallBlockSight.name": "Todos los muros bloquean la visión",
-    "levels.tilecoonfig.allWallBlockSight.hint": "Cuando se habilita, todos los muros bajo esta baldosa se tendrán en cuenta a la hora de bloquear la visión cuando la baldosa no está ocluida",
-	
+    "levels.tileconfig.noOverhead": "Esto no es una baldosa superior, esta baldosa será ignorada por niveles y se generará desde el final de la pila",
+    "levels.tileconfig.rangeTop.name": "Altura (superior)",
+    "levels.tileconfig.rangeBottom.name": "Altura (inferior)",
+    "levels.tileconfig.showIfAbove.name": "¿Mostrar incluso cuando se esté por debajo?",
+    "levels.tileconfig.showIfAbove.hint": "Si se habilita, la baldosa se mostrará incluso si el icono está por debajo del rango de altura inferior (por ejemplo, se puede usar en balcones)",
+    "levels.tileconfig.showAboveRange.name": "Diferencia máxima de elevación",
+    "levels.tileconfig.showAboveRange.hint": "Cuando se habilita '¿Mostrar incluso cuando esté por debajo?', esta será la máxima diferencia de elevación entre el icono y la baldosa, por encima de este valor, la baldosa no se mostrará",
+    "levels.tileconfig.isBasement.name": "¿Se trata del sótano?",
+    "levels.tileconfig.isBasement.hint": "Si se habilita, la baldosa solo se mostrará si el icono está dentro del rango de la baldosa, esto significa que un icono por encima del rango superior no verá la baldosa",
+    "levels.tileconfig.noFogHide.name": "No ocultar esta baldosa en la niebla",
+    "levels.tileconfig.noFogHide.hint": "Excluir esta baldosa del modo 'Niebla de guerra avanzada' de Levels",
+    "levels.tileconfig.range.unit": "Elevación",
+    "levels.tileconfig.excludeFromChecker.name": "Excluir del depurador de escenas",
+    "levels.tileconfig.noCollision.name": "Permitir visión",
+    "levels.tileconfig.noCollision.hint": "Si se habilita, la baldosa no bloqueará la visión",
+    "levels.tileconfig.allWallBlockSight.name": "Todos los muros bloquean la visión",
+    "levels.tileconfig.allWallBlockSight.hint": "Cuando se habilita, todos los muros bajo esta baldosa se tendrán en cuenta a la hora de bloquear la visión cuando la baldosa no está ocluida",
     "levels.drawingconfig.hb.name": "Altura (inferior)",
     "levels.drawingconfig.ht.name": "Altura (superior)",
     "levels.drawingconfig.range.name": "Rango",
@@ -73,14 +69,12 @@
     "levels.tokenconfig.tokenHeight.unit": "(Distancia)",
     "levels.template.elevation.name": "Elevación",
     "levels.template.special.name": "Especial",
-
     "levels.sceneconfig.backgroundElevation.name": "Elevación del fondo",
     "levels.sceneconfig.backgroundElevation.notes": "Elevación en unidades de distancia que configura la altura de la imagen de fondo para las baldosas bajo los pies",
     "levels.sceneconfig.weatherElevation.name": "Elevación del clima",
     "levels.sceneconfig.weatherElevation.notes": "Elevación en unidades de distancia que configura la altura de los efectos climatológicos",
     "levels.sceneconfig.lightMasking.name": "Máscara de luces",
     "levels.sceneconfig.lightMasking.notes": "Muestra luces bajo la elevación actual y las enmascara usando baldosas. Esta característica tiene ciertas limitaciones, por favor consulte la documentación del módulo si quiere más información",
-
     "levels.controls.main.name": "Niveles",
     "levels.controls.levelsview.name": "Habilitar visión/colocación de niveles",
     "levels.controls.definelevels.name": "Editar niveles",
@@ -90,9 +84,8 @@
     "levels.controls.levelshole.name": "Coloca un dibujo para las escaleras, si no se marca esta opción aparecerán agujeros",
     "levels.controls.levelsclear.name": "Borrar niveles",
     "levels.controls.placeOverhead.name": "Si se habilita, colocará baldosas superpuestas 'dentro' de los niveles",
-    "levels.controls.setTemplateElevation.name":"Ajuste la elevación para la la próxima plantilla",
-    "levels.controls.suppressBrmode.name":"Suprimir aplicación de modo Better Roofs",
-
+    "levels.controls.setTemplateElevation.name": "Ajuste la elevación para la la próxima plantilla",
+    "levels.controls.suppressBrmode.name": "Suprimir aplicación de modo Better Roofs",
     "levels.dialog.levelsclear.title": "Borrar niveles",
     "levels.dialog.levelsclear.content": "¿Eliminar todos los niveles almacenados?",
     "levels.dialog.define.warn": "Defina los niveles como: inferior,superior|inferior,superior - eg. 0,9|10,19|20,29",
@@ -104,15 +97,11 @@
     "levels.dialog.getFromScene.content": "¿Desea tomar los niveles de la escena actual? Esto sobrescribirá los niveles actuales",
     "levels.dialog.elevator.title": "Niveles - Elija una planta",
     "levels.dialog.elevation.title": "Ajuste la elevación para la la próxima plantilla",
-
     "levels.ui.title": "Levels (Niveles) - Herramienta de capas",
-
     "levels.yesnodialog.yes": "Confirmar",
     "levels.yesnodialog.no": "Cancelar",
-
     "levels.widget.title": "Niveles",
     "levels.widget.element": "Nivel",
-
     "levels.form.bottom": "Inferior:",
     "levels.form.top": "Superior:",
     "levels.form.name": "Nombre:",
@@ -122,19 +111,16 @@
     "levels.form.suggestedLevels": "Generar niveles sugeridos",
     "levels.form.autoLevels": "Obtener niveles de la escena",
     "levels.err.collision": "Este movimiento entra en conflicto con al menos un piso/techo",
-
     "levels.err.wallheight": "¡AVISO! Levels necesita la versión 4.1.0 de Wall Height para funcionar correctamente",
     "levels.err.lessfog": "Niveles: ¡AVISO! Se ha detectado el módulo Less Fog - la visibilidad de los iconos no funcionará adecuadamente, por favor, deshabilite uno de los dos",
     "levels.err.tokenheight": "Niveles: ¡AVISO! Se ha detectado que tiene habilitada la opción de Wall Height 'Habilitar altura de iconos' - ¡este ajuste es incompatible con Levels y se ha deshabilitado!",
     "levels.info.advancedMode": "Niveles: El modo avanzado de Better Roofs ha sido habilitado",
     "levels.firsttime.dialog": "",
-
     "levels.dialog.checkScene.title": "Niveles - Depuración de escenas",
     "levels.dialog.checkScene.content": "Se han detectado baldosas con polígonos que o bien no han sido autodetectados o bien no han sido definidos correctamente, por favor, compruebe las baldosas siguientes:",
     "levels.dialog.checkScene.learnMore": "¿No sabe lo que es Polígono? ¿Tiene cualquier otro problema? Acude a la página de Levels, encontrará un vídeo dedicado exclusivamente a Polígono",
     "levels.dialog.checkScene.noIssues": "¡No se ha detectado ningún problema!",
     "levels.dialog.checkScene.excluded": "Excluidas de la depuración",
-
     "levels.ui.players": "Mostrar a los jugadores en la IU",
     "levels.ui.stair": "Colocar dibujos como escaleras",
     "levels.ui.addLevel": "Añadir nuevo nivel",
@@ -143,8 +129,5 @@
     "levels.ui.clearLevels": "Borrar niveles",
     "levels.ui.debugScene": "Depurar escena (en rojo significa que se han detectado problemas)",
     "levels.ui.minElevDiff": "Tamaño de nivel mínimo",
-
-
     "levels.conflicts.midiqol.tokenvis": "Habilitar la opción de MidiQOL 'Permitir a los jugadores controlar sus iconos ocultos' producirá problemas con la visibilidad de los iconos. Por favor, deshabilite esa opción"
-
 }
