--- a/lang/fr.json
+++ b/lang/fr.json
@@ -4,8 +4,8 @@
     "levels.settings.enableTooltips.hint": "Afficher les info-bulles avec le haut et le bas lors du survol des objets de niveaux",
     "levels.settings.tokenElevScale.name": "Modifier la taille du jeton en fonction de l'altitude",
     "levels.settings.tokenElevScale.hint": "Modifier la taille des jetons en fonction de l'élévation du jeton contrôlé",
-    "levels.settings.tokenElevScaleMultiSett.name":"Multiplicateur personnalisé d'échelle d'élévation",
-    "levels.settings.tokenElevScaleMultiSett.hint":"Multipliez l'échelle d'altitude par ce nombre. Un nombre supérieur à 1 augmentera les jetons tandis qu'un nombre inférieur à 1 les rendra plus petits",
+    "levels.settings.tokenElevScaleMultiSett.name": "Multiplicateur personnalisé d'échelle d'élévation",
+    "levels.settings.tokenElevScaleMultiSett.hint": "Multipliez l'échelle d'altitude par ce nombre. Un nombre supérieur à 1 augmentera les jetons tandis qu'un nombre inférieur à 1 les rendra plus petits",
     "levels.settings.fogHiding.name": "Brouillard de guerre avancé",
     "levels.settings.fogHiding.hint": "Cacher les étages inexplorés du brouillard de guerre exploré",
     "levels.settings.lockElevation.name": "Verrouiller l'élévation",
@@ -20,9 +20,9 @@
     "levels.settings.preciseLightOcclusion.hint": "Supprime les artefacts d'occlusion lumineuse au détriment des performances",
     "levels.settings.preciseTokenVisibility.name": "Visibilité précise du jeton",
     "levels.settings.preciseTokenVisibility.hint": "L'activation de cette option vérifiera la vue contre les coins du jeton en plus du centre au prix de certaines performances",
-    "levels.settings.blockSightMovement.name":"Clôture",
+    "levels.settings.blockSightMovement.name": "Clôture",
     "levels.settings.blockSightMovement.hint": "Lorsqu'il est activé, les murs dont la hauteur ne restreint pas la vision restreignent toujours les mouvements",
-    "levels.settings.forceUiRefresh.name":"Forcer l'actualisation de l'interface utilisateur",
+    "levels.settings.forceUiRefresh.name": "Forcer l'actualisation de l'interface utilisateur",
     "levels.settings.forceUiRefresh.hint": "Force des actualisations plus fréquentes de l'interface utilisateur des niveaux au détriment des performances, si activé peut causer des problèmes sur des systèmes spécifiques (par exemple PF2e)",
     "levels.settings.hideElevation.name": "Masquer l'élévation",
     "levels.settings.hideElevation.hint": "Masquer l'élévation des jetons",
@@ -31,14 +31,13 @@
     "levels.settings.hideElevation.opt2": "Masquer pour tout le monde",
     "levels.settings.revealTokenInFog.name": "Révéler le jeton dans le brouillard",
     "levels.settings.revealTokenInFog.hint": "Si un jeton est visible, révèle le brouillard de guerre autour de ce jeton",
-
-    "levels.tilecoonfig.rangeTop.name": "Hauteur (Haut)",
-    "levels.tilecoonfig.rangeBottom.name": "Hauteur (Bas)",
-    "levels.tilecoonfig.showIfAbove.name": "Afficher même en dessous ?",
-    "levels.tilecoonfig.showAboveRange.name":"Différence d'élévation maximale",
-    "levels.tilecoonfig.isBasement.name":"est le sous-sol ?",
-    "levels.tilecoonfig.noFogHide.name":"Ne cachez pas cette tuile dans le brouillard",
-    "levels.tilecoonfig.range.unit": "Élévation",
+    "levels.tileconfig.rangeTop.name": "Hauteur (Haut)",
+    "levels.tileconfig.rangeBottom.name": "Hauteur (Bas)",
+    "levels.tileconfig.showIfAbove.name": "Afficher même en dessous ?",
+    "levels.tileconfig.showAboveRange.name": "Différence d'élévation maximale",
+    "levels.tileconfig.isBasement.name": "est le sous-sol ?",
+    "levels.tileconfig.noFogHide.name": "Ne cachez pas cette tuile dans le brouillard",
+    "levels.tileconfig.range.unit": "Élévation",
     "levels.drawingconfig.hb.name": "Hauteur (Bas)",
     "levels.drawingconfig.ht.name": "Hauteur (Haut)",
     "levels.drawingconfig.range.name": "Plage de trous",
@@ -54,7 +53,6 @@
     "levels.tokenconfig.tokenHeight.unit": "(Distance)",
     "levels.template.elevation.name": "Élévation",
     "levels.template.special.name": "Spécial",
-
     "levels.controls.main.name": "Niveaux",
     "levels.controls.levelsview.name": "Activer l'affichage/le placement des niveaux",
     "levels.controls.definelevels.name": "Modifier les niveaux",
@@ -64,17 +62,13 @@
     "levels.controls.levelshole.name": "Placer les dessins en tant qu'escaliers lorsqu'il est activé, placer en tant que trous lorsqu'il est désactivé",
     "levels.controls.levelsclear.name": "Effacer les niveaux",
     "levels.controls.placeOverhead.name": "Si activé, placez les tuiles comme tuiles aériennes 'à l'intérieur' des niveaux",
-    "levels.controls.setTemplateElevation.name":"Définir l'élévation pour le prochain modèle placé",
-    "levels.controls.suppressBrmode.name":"Supprimer l'application du mode Better Roofs", 
-
+    "levels.controls.setTemplateElevation.name": "Définir l'élévation pour le prochain modèle placé",
+    "levels.controls.suppressBrmode.name": "Supprimer l'application du mode Better Roofs",
     "levels.ui.title": "Niveaux - Outil de calque",
-
     "levels.yesnodialog.yes": "Confirmer",
     "levels.yesnodialog.no": "Annuler",
-
     "levels.widget.title": "Niveaux",
     "levels.widget.element": "Niveau",
-
     "levels.form.bottom": "Bas :",
     "levels.form.top": "Top :",
     "levels.form.name": "Nom :",
@@ -84,7 +78,6 @@
     "levels.form.suggestedLevels": "Générer les niveaux suggérés",
     "levels.form.autoLevels": "Obtenir les niveaux de la scène",
     "levels.err.collision": "La tentative de mouvement entre en collision avec au moins un sol/plafond",
-
     "levels.err.lessfog": "Niveaux : AVERTISSEMENT ! Moins de brouillard détecté - la visibilité des jetons ne fonctionnera pas comme prévu, veuillez désactiver l'un ou l'autre module",
     "levels.err.tokenheight": "Niveaux : AVERTISSEMENT ! L'option 'Activer la hauteur du jeton' détectée est activée dans le module Hauteur du mur - ce paramètre est incompatible avec les niveaux et a été désactivé !",
     "levels.firsttime.dialog": ""
