--- a/lang/ja.json
+++ b/lang/ja.json
@@ -4,8 +4,8 @@
     "levels.settings.enableTooltips.hint": "階層オブジェクトにホバーする時、ツールチップで詳細情報を表示する",
     "levels.settings.tokenElevScale.name": "高度でコマのサイズを変える",
     "levels.settings.tokenElevScale.hint": "現在選択しているコマを視点として他のコマの大きさを高度によって変更する（遠ければ遠いほど小さくなる）。",
-    "levels.settings.tokenElevScaleMultiSett.name":"高度カスタム倍率",
-    "levels.settings.tokenElevScaleMultiSett.hint":"高度の倍率を設定します。大きな数字はコマを大きくし、1より小さい数字はコマを小さくします。",
+    "levels.settings.tokenElevScaleMultiSett.name": "高度カスタム倍率",
+    "levels.settings.tokenElevScaleMultiSett.hint": "高度の倍率を設定します。大きな数字はコマを大きくし、1より小さい数字はコマを小さくします。",
     "levels.settings.fogHiding.name": "高度なマスク",
     "levels.settings.fogHiding.hint": "マスクの除去状況を階層ごとに個別管理する。",
     "levels.settings.lockElevation.name": "高度設定ロック",
@@ -20,9 +20,9 @@
     "levels.settings.preciseLightOcclusion.hint": "パフォーマンスが悪くなりますが、光の無駄なアーティファクトを除去します。",
     "levels.settings.preciseTokenVisibility.name": "正確なコマの視線",
     "levels.settings.preciseTokenVisibility.hint": "有効化することでコマの視線を中央からではなく、角からも計算するようになります。パフォーマンスは少し悪くなります。",
-    "levels.settings.blockSightMovement.name":"柵",
-    "levels.settings.blockSightMovement.hint":"有効化時、視線をブロックしないウォールは移動をブロックするようになります。",
-    "levels.settings.forceUiRefresh.name":"UI再描画",
+    "levels.settings.blockSightMovement.name": "柵",
+    "levels.settings.blockSightMovement.hint": "有効化時、視線をブロックしないウォールは移動をブロックするようになります。",
+    "levels.settings.forceUiRefresh.name": "UI再描画",
     "levels.settings.forceUiRefresh.hint": "階層ModのUIを強制的に再描画させる回数を増やします。パフォーマンスが悪くなり、特定のシステムでは機能しない恐れがあります（PF2等）",
     "levels.settings.hideElevation.name": "高低差隠匿",
     "levels.settings.hideElevation.hint": "コマから高低差の情報を隠すかどうか設定します。",
@@ -31,15 +31,13 @@
     "levels.settings.hideElevation.opt2": "全員から隠す",
     "levels.settings.revealTokenInFog.name": "マスク中にコマを表示",
     "levels.settings.revealTokenInFog.hint": "コマが少しでも見えているのであればそのコマの全体像のマスクだけ除去されます。",
-
-
-    "levels.tilecoonfig.rangeTop.name": "高さ（上）",
-    "levels.tilecoonfig.rangeBottom.name": "高さ（下）",
-    "levels.tilecoonfig.showIfAbove.name": "下層に居ても表示する？",
-    "levels.tilecoonfig.showAboveRange.name":"最大高低差",
-    "levels.tilecoonfig.isBasement.name":"地下室？",
-    "levels.tilecoonfig.noFogHide.name":"このタイトルをマスクしない",
-    "levels.tilecoonfig.range.unit": "高度",
+    "levels.tileconfig.rangeTop.name": "高さ（上）",
+    "levels.tileconfig.rangeBottom.name": "高さ（下）",
+    "levels.tileconfig.showIfAbove.name": "下層に居ても表示する？",
+    "levels.tileconfig.showAboveRange.name": "最大高低差",
+    "levels.tileconfig.isBasement.name": "地下室？",
+    "levels.tileconfig.noFogHide.name": "このタイトルをマスクしない",
+    "levels.tileconfig.range.unit": "高度",
     "levels.drawingconfig.hb.name": "高さ（下）",
     "levels.drawingconfig.ht.name": "高さ（上）",
     "levels.drawingconfig.range.name": "穴の距離",
@@ -55,7 +53,6 @@
     "levels.tokenconfig.tokenHeight.unit": "(距離)",
     "levels.template.elevation.name": "高度",
     "levels.template.special.name": "特殊",
-
     "levels.controls.main.name": "階層",
     "levels.controls.levelsview.name": "階層配置モードに移行する",
     "levels.controls.definelevels.name": "階層編集",
@@ -65,9 +62,8 @@
     "levels.controls.levelshole.name": "有効化時は画像を階段として配置し、無効化時は穴として配置します。",
     "levels.controls.levelsclear.name": "階層クリア",
     "levels.controls.placeOverhead.name": "有効化時、タイルを階層の「中の前景タイル」として配置する。",
-    "levels.controls.setTemplateElevation.name":"次に配置するテンプレートの階層を指定",
-    "levels.controls.suppressBrmode.name":"Better roofsの機能を抑制する",
-
+    "levels.controls.setTemplateElevation.name": "次に配置するテンプレートの階層を指定",
+    "levels.controls.suppressBrmode.name": "Better roofsの機能を抑制する",
     "levels.dialog.levelsclear.title": "階層クリア",
     "levels.dialog.levelsclear.content": "保存されたすべての階層をクリアしますか？",
     "levels.dialog.define.warn": "階層は「床,天井|床,天井…」のように指定します。例：0,9|10,19|20,29",
@@ -79,15 +75,11 @@
     "levels.dialog.getFromScene.content": "現在のシーンから階層の設定を取得しますか？既に設定されている階層は失われます。",
     "levels.dialog.elevator.title": "階層 ー 選択",
     "levels.dialog.elevation.title": "次のテンプレートの配置階層を設定",
-
     "levels.ui.title": "階層 ー レイヤー",
-
     "levels.yesnodialog.yes": "確認",
     "levels.yesnodialog.no": "キャンセル",
-
     "levels.widget.title": "階層",
     "levels.widget.element": "階層",
-
     "levels.form.bottom": "床：",
     "levels.form.top": "天井：",
     "levels.form.name": "名前：",
@@ -97,12 +89,8 @@
     "levels.form.suggestedLevels": "お勧め階層生成",
     "levels.form.autoLevels": "シーンから階層を取得",
     "levels.err.collision": "その移動は少なくとも1つの床・天井と衝突します。",
-
     "levels.err.lessfog": "階層：警告！Less fogモジュールが検出されました。マスク除去が正しく機能しない可能性があります。いずれかのModを無効化してください。",
     "levels.err.tokenheight": "階層：警告！Wall Heightモジュールのコマの身長を管理する機能が検出されましたが、このモジュールでは使用不能なため自動的に無効化しました。",
     "levels.firsttime.dialog": "",
-
-
     "levels.conflicts.midiqol.tokenvis": "Midi-Qolの「プレイヤーは所有する非表示トークンをコントロールできる」を有効化するとコマの視認性が正常に動作しない可能性があります。この機能を無効化してください。"
-
 }
