--- a/lang/en.json
+++ b/lang/en.json
@@ -271,7 +271,8 @@
             "wallheight": "WARNING! Levels requires Wall Height to be version 4.1.0 or higher to work correctly.",
             "lessfog": "Levels: WARNING! Less Fog detected - token visibility will not work as expected, please disable either module",
             "tokenheight": "Levels: WARNING! Detected 'Enable Token Height' option enabled in module Wall Height - this setting is incompatible with Levels and has been disabled!",
-            "elevatedvision": "Levels: WARNING! Detected 'Default for automatic token elevation' option enabled in module 'Elevated Vision' - this setting is known to disrupt Levels regular functionality and has been disabled!"
+            "elevatedvision": "Levels: WARNING! Detected 'Default for automatic token elevation' option enabled in module 'Elevated Vision' - this setting is known to disrupt Levels regular functionality and has been disabled!",
+            "elevatedvisioncompat": "Levels: WARNING! Detected module 'Elevated Vision' - this module is known to disrupt Levels regular functionality and should not be used in combination with Levels."
         },
         "info": {
             "advancedMode": "Levels: Advanced Mode option in Better Roofs has been enabled."
