--- a/lang/en.json
+++ b/lang/en.json
@@ -279,7 +279,7 @@
             "advancedMode": "Levels: Advanced Mode option in Better Roofs has been enabled."
         },
         "firsttime": {
-            "dialog": ""
+            "dialog": "."
         },
         "conflicts": {
             "midiqol": {
